# openglTest

./: .gitignore  README.md
01.defaultRendering/: CMakeLists.txt  main.cpp
02.triangle/: CMakeLists.txt  main.cpp
03.textures/: CMakeLists.txt  main.cpp  shader.fs  shader.vs
04.Transformations/: CMakeLists.txt  main.cpp  shader.fs
05.coordinateSystems/: main.cpp  shader.vs
05_2.coordinateSystems2/: CMakeLists.txt  main.cpp
06.camera/: CMakeLists.txt  main.cpp
06_2.camera2/: main.cpp
06_3.camera3/: main.cpp
07.Lighting_color/: CMakeLists.txt  colors.fs  main.cpp
08.Light_Basic/: main.cpp
08_2.Light_Basic2/: CMakeLists.txt  main.cpp
09.meterials/: CMakeLists.txt  main.cpp  meterials.fs
10.LightMap/: lightmap.fs  main.cpp
10_2.LightMap2/: CMakeLists.txt  lightmap.fs  main.cpp
11.DirectionalLight/: CMakeLists.txt  light_casters.fs  main.cpp
include/: shader_s.h
